# piecewise

./: .gitignore  .gitmodules  CONFIG.md  DEPLOY.md  Dockerfile  Dockerfile.backend  HACKING.md  INSTALL.md  README.md  SECURITY.md  Vagrantfile  app.py  config.py  dev.sqlite3  docker-compose.yml  docker-entrypoint.sh  env.example  form.html  hosts  htpasswd  index.html  knexfile.js  letsencrypt_tasks.yml  package-lock.json  package.json  piecewise-statistics.md  playbook.yml  pyproject.toml  requirements.txt  reset_hosts.yml  seattle_census10_blockgroup.topojson  seattle_tasks.yml  system_tasks.yml  upd_frontend_pw_python.yml  upd_frontend_pw_web.yml  upd_server_config.yml  update_maxmind.sh  update_pw_python.yml  update_pw_web.yml  user_tasks.yml  (+1 more)
backend/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 621881a32d62_create_tables.py  7cee758fd5b4_create_all_tables.py  a149f2b502b2_create_all_tables.py
backend/app/: main.py
backend/app/api/: v1.py
backend/app/api/endpoints/: submissions.py
backend/app/config/: settings.py
backend/app/db/: session.py
backend/app/db/crud/: submission.py  user.py
backend/app/db/models/: submission.py
backend/app/db/schemas/: user.py
backend/piecewise/: __main__.py
backend/piecewise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/piecewise/api/endpoints/: submissions.py
backend/piecewise/config/: defaults.py  settings.py
backend/piecewise/db/: session.py
backend/piecewise/db/crud/: submission.py  user.py
(+393 files in other folders)
