[tool.poetry]
name = "piecewise"
version = "0.1.0"
description = "A tool for digesting and aggregating user-volunteered Internet performance test results data from Measurement Lab, and visualizing aggregate data on the web."
authors = ["Josh King <josh@throneless.tech>, Rae Gaines <rae@throneless.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
